<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:context="com.dragondev.n2vocabulary.OptionFragment">

    <Button
        android:id="@+id/btnExit"
        style="@style/option_button_style"
        android:drawableTop="@drawable/ic_exit"
        android:text="@string/exit" />

    <Button
        android:id="@+id/btnSetting"
        style="@style/option_button_style"
        android:drawableTop="@drawable/ic_settings"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnFavourite"
        style="@style/option_button_style"
        android:drawableTop="@drawable/ic_favourite"
        android:text="@string/favourites" />

</LinearLayout>