<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vocabulary_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/kanji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="6dp"
        android:text="@string/kanji"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/furi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/kanji"
        android:layout_marginBottom="6dp"
        android:text="@string/furi"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/furi"
        android:text="@string/meaning"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:gravity="center|center_vertical"
            android:text="@string/no"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/week_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/week_day"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>
