<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dragondev.n2vocabulary.QuestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/rounded_rectangle"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <RelativeLayout
                android:id="@+id/quiz_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:paddingTop="13dp"
                    android:text="@string/quiz"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/speak_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/question_speaker"
                    android:drawableLeft="@drawable/speak"
                    android:drawableStart="@drawable/speak"
                    android:gravity="center_vertical"
                    android:text="@string/qtotal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </RelativeLayout>

            <View
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/quiz_header"
                android:layout_marginBottom="12dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/qno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bar"
                android:text="@string/qno"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bar"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/qno"
                android:layout_toRightOf="@+id/qno"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/question"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/option_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/question"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingTop="5dp"
                    android:text="@string/option1" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingTop="5dp"
                    android:text="@string/option2" />

                <RadioButton
                    android:id="@+id/option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingTop="5dp"
                    android:text="@string/option3" />

                <RadioButton
                    android:id="@+id/option4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.5"
                    android:paddingTop="5dp"
                    android:text="@string/option4" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev"
                style="@style/app_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/app_button"
                android:text="@string/prev" />

            <Button
                android:id="@+id/finish"
                style="@style/app_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/app_button"
                android:text="@string/finish" />

            <Button
                android:id="@+id/next"
                style="@style/app_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/app_button"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>
