<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/score"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/result"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:focusable="false"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/check"
            style="@style/app_button_style"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/app_button"
            android:text="@string/check" />

        <Button
            android:id="@+id/ok"
            style="@style/app_button_style"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/app_button"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>
