<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp" >
    
	    <TextView
	        android:id="@+id/qno_list"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/qno"
	        android:textSize="16sp"/>
	    
	    <ImageView
		    android:id="@+id/not_taken_img"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/qno_list"
		    android:contentDescription="@string/description"
		    android:layout_gravity="center_vertical"
		    android:visibility="gone"/>
	    
	    <TextView
	        android:id="@+id/question_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/qno_list"
	        android:layout_toEndOf="@+id/qno_list"
	        android:layout_marginLeft="6dp"
	        android:layout_marginStart="6dp"
	        android:text="@string/question"
	        android:textSize="16sp"
	        android:lineSpacingMultiplier="1.3"
	        android:clickable="true"/>
	    
	    <RadioGroup
	        android:id="@+id/option_group_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/question_list"
	        android:layout_toRightOf="@+id/qno_list"
	        android:layout_toEndOf="@+id/qno_list">
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <RadioButton 
		            android:id="@+id/option1_list"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/option1"
		            android:lineSpacingMultiplier="1.3"
					android:paddingTop="5dp"
					android:gravity="start"
		            android:clickable="false"/>
		        <ImageView
		            android:id="@+id/option1_img"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/description"
		            android:layout_gravity="center_vertical"
		            android:visibility="gone"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <RadioButton 
		            android:id="@+id/option2_list"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/option2"
		            android:lineSpacingMultiplier="1.3"
					android:paddingTop="5dp"
					android:gravity="start"
		            android:clickable="false"/>
		        <ImageView
		            android:id="@+id/option2_img"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/description"
		            android:layout_gravity="center_vertical"
		            android:visibility="gone"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <RadioButton 
		            android:id="@+id/option3_list"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/option3"
		            android:lineSpacingMultiplier="1.3"
					android:paddingTop="5dp"
					android:gravity="start"
		            android:clickable="false"/>
		        <ImageView
		            android:id="@+id/option3_img"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/description"
		            android:layout_gravity="center_vertical"
		            android:visibility="gone"/>
	            
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            
	            <RadioButton 
		            android:id="@+id/option4_list"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/option4"
		            android:lineSpacingMultiplier="1.3"
					android:paddingTop="5dp"
					android:gravity="start"
		            android:clickable="false"/>
		        <ImageView
		            android:id="@+id/option4_img"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/description"
		            android:layout_gravity="center_vertical"
		            android:visibility="gone"/>
	            
	        </LinearLayout>       
	        
	    </RadioGroup>

</RelativeLayout>
